--- a/SmartMemo/res/layout/activity_timing.xml
+++ b/SmartMemo/res/layout/activity_timing.xml
@@ -14,12 +14,18 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
+           
             android:orientation="vertical"
             android:paddingBottom="60.0dip"
             android:paddingLeft="10.0dip"
             android:paddingRight="10.0dip"
-            android:paddingTop="10.0dip" >
+            android:background="@drawable/main_bg_default_img_3">
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_timming_bg"/>
 
             <TextView
                 android:layout_width="fill_parent"
@@ -30,7 +36,7 @@
                 android:paddingLeft="4.0dip"
                 android:text="定时提醒"
                 android:textColor="@color/black"
-                android:textSize="16.0sp" />
+                android:textSize="20.0sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -66,7 +72,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="提醒时间 :"
-                                android:textColor="#ff333333"
+                               android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                             <EditText
@@ -122,7 +128,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="地      点 :"
-                                android:textColor="#ff333333"
+                                android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                             <EditText
@@ -156,7 +162,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="内      容："
-                                android:textColor="#ff333333"
+                                android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                             <EditText
@@ -180,7 +186,7 @@
                 android:paddingLeft="4.0dip"
                 android:text="重要程度"
                 android:textColor="@color/black"
-                android:textSize="16.0sp" />
+                android:textSize="20.0sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
