--- a/SmartMemo/res/layout/activity_finish.xml
+++ b/SmartMemo/res/layout/activity_finish.xml
@@ -8,12 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="@drawable/main_bg_default_img_3" >
 
         <ListView
             android:id="@+id/listViewFinish"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+          >
         </ListView>
 
     </LinearLayout>
