--- a/SmartMemo/res/layout/activity_periodic.xml
+++ b/SmartMemo/res/layout/activity_periodic.xml
@@ -10,17 +10,25 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:background="@color/lightgray"
-        android:fadingEdge="none" >
+        android:fadingEdge="none" 
+        
+        >
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
             android:orientation="vertical"
             android:paddingBottom="60.0dip"
             android:paddingLeft="10.0dip"
             android:paddingRight="10.0dip"
-            android:paddingTop="10.0dip" >
+            android:background="@drawable/main_bg_default_img_3"
+            >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_periodic_bg" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -31,7 +39,7 @@
                 android:paddingLeft="4.0dip"
                 android:text="周期性提醒"
                 android:textColor="@color/black"
-                android:textSize="16.0sp" />
+                android:textSize="20.0sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -67,7 +75,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="周       期:"
-                                android:textColor="#ff333333"
+                                android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                             <Spinner
@@ -99,7 +107,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="周期详细："
-                                android:textColor="#ff333333"
+                                android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                            <EditText
@@ -113,17 +121,6 @@
                     </TableRow>
                 </TableLayout>
             </LinearLayout>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10.0dip"
-                android:layout_marginTop="10.0dip"
-                android:gravity="center_vertical"
-                android:paddingLeft="4.0dip"
-                android:text=""
-                android:textColor="@color/black"
-                android:textSize="16.0sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -141,6 +138,7 @@
                         android:layout_width="fill_parent"
                         android:layout_marginLeft="2.0dip"
                         android:layout_marginRight="2.0dip"
+                        android:layout_marginTop="7.0dip"
                         android:background="@drawable/table_button_single_bg"
                         android:paddingBottom="16.0dip"
                         android:paddingTop="8.0dip" >
@@ -158,7 +156,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="内      容："
-                                android:textColor="#ff333333"
+                                android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                             <EditText
@@ -181,7 +179,7 @@
                 android:paddingLeft="4.0dip"
                 android:text="重要程度"
                 android:textColor="@color/black"
-                android:textSize="16.0sp" />
+                android:textSize="20.0sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
