--- a/SmartMemo/res/layout/activity_realtime_memo.xml
+++ b/SmartMemo/res/layout/activity_realtime_memo.xml
@@ -13,12 +13,18 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
+            
             android:orientation="vertical"
             android:paddingBottom="60.0dip"
             android:paddingLeft="10.0dip"
-            android:paddingRight="10.0dip"
-            android:paddingTop="10.0dip" >
+            android:paddingRight="10.0dip" 
+            android:background="@drawable/main_bg_default_img_3">
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_realtime_bg"/>
 
             <TextView
                 android:layout_width="fill_parent"
@@ -29,7 +35,7 @@
                 android:paddingLeft="4.0dip"
                 android:text="实时提醒"
                 android:textColor="@color/black"
-                android:textSize="16.0sp" />
+                android:textSize="20.0sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -65,7 +71,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="地       点:"
-                                android:textColor="#ff333333"
+                                android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                             <EditText
@@ -99,7 +105,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="时       效:"
-                                android:textColor="#ff333333"
+                                android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                             <Spinner
@@ -111,16 +117,6 @@
                     </TableRow>
                 </TableLayout>
             </LinearLayout>
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10.0dip"
-                android:layout_marginTop="10.0dip"
-                android:gravity="center_vertical"
-                android:paddingLeft="4.0dip"
-                android:textColor="@color/black"
-                android:textSize="10.0sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -138,6 +134,7 @@
                         android:layout_width="fill_parent"
                         android:layout_marginLeft="2.0dip"
                         android:layout_marginRight="2.0dip"
+                        android:layout_marginTop="7.0dip"
                         android:background="@drawable/table_button_single_bg"
                         android:paddingBottom="16.0dip"
                         android:paddingTop="8.0dip" >
@@ -155,7 +152,7 @@
                                 android:includeFontPadding="false"
                                 android:paddingLeft="5.0dip"
                                 android:text="内      容："
-                                android:textColor="#ff333333"
+                                android:textColor="@color/skyblue"
                                 android:textSize="16.0sp" />
 
                             <EditText
@@ -178,7 +175,7 @@
                 android:paddingLeft="4.0dip"
                 android:text="重要程度"
                 android:textColor="@color/black"
-                android:textSize="16.0sp" />
+                android:textSize="20.0sp" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
