--- a/SmartMemo/res/layout/activity_unfinish.xml
+++ b/SmartMemo/res/layout/activity_unfinish.xml
@@ -8,13 +8,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="@drawable/main_bg_default_img_3" >
 
         <ListView
             android:id="@+id/listViewUnfinish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible" >
+            android:visibility="visible" 
+           >
 
         </ListView>
 
