--- a/SmartMemo/res/layout/none_item.xml
+++ b/SmartMemo/res/layout/none_item.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="@drawable/main_bg_default_img_3" >
 
         <TextView
             android:id="@+id/textView3"
@@ -23,7 +24,7 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:textSize="15sp"
-            android:textColor="@color/gray"
+            android:textColor="@color/white"
             android:gravity="center" />
 
         <TextView
